fix: Corrigido integração com a secullum para o motor de auditoria ter todos os dados e adicionados dados a sincronização de dados de colaboradores e horarios além de fallback na chamda da secullum.
